# swirl

./: Cargo.toml  LICENSE-APACHE  README.md  azure-pipelines.yml  code_of_conduct.md  diesel.toml
integration_tests/: Cargo.toml
integration_tests/tests/: codegen.rs  db.rs  dummy_jobs.rs  lib.rs  runner.rs  sync.rs  test_guard.rs  util.rs
src/: db.rs  errors.rs  job.rs  lib.rs  registry.rs  runner.rs  schema.rs  storage.rs
swirl/: Cargo.toml
swirl/examples/: run_100k_jobs.rs
swirl/src/: db.rs  errors.rs  job.rs  lib.rs  registry.rs  runner.rs  storage.rs
swirl/src/runner/: channel.rs  event.rs
swirl_proc_macro/: Cargo.toml
swirl_proc_macro/src/: background_job.rs  diagnostic_shim.rs  lib.rs
