[package]
name = "swirl"
version = "0.1.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
edition = "2018"
description = "A simple background processing framework for Diesel and PostgreSQL"
license = "MIT OR Apache-2.0"

[dependencies]
diesel = { version = "1.0.0", default-features = false, features = ["postgres"] }
threadpool = "1.7"

[dev-dependencies]
lazy_static = "1.0"
