[package]
name = "integration_tests"
version = "0.1.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
edition = "2018"
autotests = false

[dependencies]
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
swirl = { path = "../swirl" }
lazy_static = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
dotenv = "0.11"

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true
