[package]
name = "swirl"
version = "0.1.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
edition = "2018"
description = "A simple background processing framework for Diesel and PostgreSQL"
license = "MIT OR Apache-2.0"

[dependencies]
diesel = { version = "1.0.0", features = ["postgres", "serde_json"] }
threadpool = "1.7"
serde_json = "1.0.0"
serde = "1.0.0"

[dev-dependencies]
dotenv = "0.11"
lazy_static = "1.0"
num_cpus = "1.0"

[features]
default = ["r2d2"]
r2d2 = ["diesel/r2d2"]
