[package]
name = "swirl_proc_macro"
version = "0.1.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
description = "This library should not be used directly, it is re-exported through swirl"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true

[features]
nightly = []
